--- a/sites/stamped.com/bin/www/templates/about.html
+++ b/sites/stamped.com/bin/www/templates/about.html
@@ -10,24 +10,23 @@
         <meta name="author" content="Stamped, Inc."> 
         <meta name="copyright" content="Stamped, Inc."> 
         <meta name="robots" content="index,follow"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+                
         <!-- Style -->
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/style.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="http://zomgco.com/tramped/favicon.ico"/>
-        <link rel="apple-touch-icon" href="http://zomgco.com/tramped/apple-touch-icon.png"/>
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/style.css" type="text/css" media="screen" />
+        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://zomgco.com/tramped/js/function.js"></script>
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script>
     </head>
     <body>
         <div id="page" class="flood">
             <div class="wrap">
             <div class="sheet">
                 <div class="top-wave"></div>
-                <a href="." class="brand replaced">Stamped</a>
+                <a href="/" class="brand replaced">Stamped</a>
                 <div class="inner">
                 <div class="mission replaced">
                     <p>Our mission is to build a platform for friends to help each other discover the 
@@ -38,7 +37,7 @@ best parts of their world.</p>
                     <ul>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-robby.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-robby.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person robby">
@@ -46,14 +45,14 @@ best parts of their world.</p>
                                     <span class="title">CEO &amp; Co-Founder</span>
                                 </div>
                                 <div class="history">
-                                    <p>Robby worked at Google for 4 years, on both Gmail and most recently as Product Manager for the Ad Exchange. He built the first Stamped prototype in his overpriced NYC apartment. He graduated from Northwestern and is not Bart's brother.</p>
+                                    <p>Robby worked at Google for 4 years, on Gmail launches and most recently as Product Manager for the Ad Exchange. He built the first Stamped prototype in his tiny NYC apartment. He graduated from Northwestern and is not Bart's brother.</p>
                                     <a class="follow" href="http://twitter.com/rmstein">Follow @rmstein</a>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-kevin.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-kevin.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person kevin">
@@ -61,14 +60,14 @@ best parts of their world.</p>
                                     <span class="title">Co-Founder, Technology</span>
                                 </div>
                                 <div class="history">
-                                    <p>Kevin managed engineering at a hedge fund, where he built risk analytics technology. He also built a social calendar app that he and Robby launched at Northwestern. A movie about it, called "The Social Calendar," has not yet been made.</p>
+                                    <p>Kevin previously led development of risk analytics technology at a hedge fund in New York. He and Robby also built a social calendar app together at Northwestern; a movie about it, called "The Social Calendar," has not yet been made.</p>
                                     <a class="follow" href="http://twitter.com/kevinpalms">Follow @kevinpalms</a>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-bart.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-bart.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person bart">
@@ -76,14 +75,14 @@ best parts of their world.</p>
                                     <span class="title">Co-Founder, Marketing & Partnerships</span>
                                 </div>
                                 <div class="history">
-                                    <p>Bart previously worked at Google Creative Lab, where he contributed to Google's first Super Bowl campaign. He has also worked for David Pogue, the NY Times tech columnist. He graduated from Brown and is not Robby's brother.</p>
+                                    <p>Bart previously worked at Google Creative Lab, where he contributed to Google's first Super Bowl campaign. He also worked for David Pogue, the NY Times tech columnist. He graduated from Brown and is not Robby's brother.</p>
                                     <a class="follow" href="http://twitter.com/bartjstein">Follow @bartjstein</a>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-ed.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-ed.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person ed">
@@ -98,7 +97,7 @@ best parts of their world.</p>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-travis.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-travis.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person travis">
@@ -113,7 +112,7 @@ best parts of their world.</p>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-bons.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-bons.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person bons">
@@ -121,14 +120,14 @@ best parts of their world.</p>
                                     <span class="title">Software Engineer, Mobile Lead</span>
                                 </div>
                                 <div class="history">
-                                    <p>Andy worked at Google for 5 years, where he created Google Forms and helped build Google Chrome for the Mac. He graduated from Tufts with a B.S. and M.S. in Computer Science. He's tweeted 3,542 more times than Travis.</p>
+                                    <p>Andy worked at Google for 5 years, where he created Google Forms and helped build Google Chrome for Mac. He graduated from Tufts with a B.S. and M.S. in Computer Science. He's tweeted 3,542 more times than Travis.</p>
                                     <a class="follow" href="http://twitter.com/andybons">Follow @andybons</a>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://zomgco.com/tramped/images/headshot-jake.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-jake.png"/>
                             </div>
                             <div class="copy">
                                 <div class="person jake">
@@ -166,5 +165,6 @@ best parts of their world.</p>
         <script type="text/javascript">
             stamped.init();
         </script>
-    </body><script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-24470954-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
- </html>
+    </body>
+    <script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-24470954-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
+</html>
