--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -13,19 +13,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.51">
         
         <!-- Style -->
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/style.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="http://zomgco.com/tramped/favicon.ico"/>
-        <link rel="apple-touch-icon" href="http://zomgco.com/tramped/apple-touch-icon.png"/>
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/style.css" type="text/css" media="screen" />
+        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://zomgco.com/tramped/js/function.js"></script>
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script>
     </head>
     <body>
         <div id="home" class="wrap flood">
             <div class="iphone">
-                <a href="." class="brand replaced">Stamped</a>
+                <a href="/" class="brand replaced">Stamped</a>
                 <p class="pitch replaced">We're building a new way to put your stamp of approval on the world.</p>
                 <div class="signup">
                     <p>Sign up to be notified when we go live.</p>
@@ -34,9 +34,9 @@
                         <button type="submit" class="replaced">Submit</button>
                     </form>
                 </div>
-                <p class="thanks replaced">Woah. Thanks!</p>
+                <p class="thanks replaced">Whoa. Thanks!</p>
                 <div class="more">
-                    <span>&copy;2011 Stamped Inc.</span> <a href="about">About Us</a>
+                    <span>&copy;2011 Stamped Inc.</span> {% comment %}<a href="about">About Us</a>{% endcomment %}
                 </div> 
             </div> <!-- /iphone -->
         </div> <!-- /home -->
