--- a/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
@@ -434,7 +434,7 @@
 							<object class="IBUIButton" id="969060622">
 								<reference key="NSNextResponder" ref="870662028"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{246, 245}, {54, 42}}</string>
+								<string key="NSFrame">{{246, 242}, {62, 48}}</string>
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="851464612"/>
@@ -786,6 +786,14 @@
 					</object>
 					<int key="connectionID">116</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">shareLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="878944707"/>
+					</object>
+					<int key="connectionID">117</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1097,7 +1105,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">116</int>
+			<int key="maxID">117</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1167,6 +1175,7 @@
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
 							<string>scrollView</string>
+							<string>shareLabel</string>
 							<string>shelfBackground</string>
 							<string>spinner</string>
 							<string>stampItButton</string>
@@ -1188,6 +1197,7 @@
 							<string>UITextView</string>
 							<string>UIView</string>
 							<string>UIScrollView</string>
+							<string>UILabel</string>
 							<string>UIImageView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIButton</string>
@@ -1212,6 +1222,7 @@
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
 							<string>scrollView</string>
+							<string>shareLabel</string>
 							<string>shelfBackground</string>
 							<string>spinner</string>
 							<string>stampItButton</string>
@@ -1270,6 +1281,10 @@
 								<string key="candidateClassName">UIScrollView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
+								<string key="name">shareLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
 								<string key="name">shelfBackground</string>
 								<string key="candidateClassName">UIImageView</string>
 							</object>
@@ -1298,14 +1313,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CreateStampViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">STCreditTextField</string>
-					<string key="superclassName">UITextField</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/STCreditTextField.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
