--- a/sites/stamped.com/bin/www/templates/about.html
+++ b/sites/stamped.com/bin/www/templates/about.html
@@ -151,7 +151,7 @@ best parts of their world.</p>
                     <span class="name line">Stamped, Inc</span>
                     <span class="street line">215 Park Ave. South #1802</span>
                     <span class="city-state line">New York, NY 10003</span>
-                    <p><a href="mailto:info@stamped.com">info@stamped.com</a></p>
+                    <p><a href="mailto:press@stamped.com">press@stamped.com</a></p>
                     <p><a class="follow-us replaced" href="http://twitter.com/stampedapp">Follow us on twitter</a></p>
                 </div>
                 </div>
