--- a/sites/stamped.com/bin/www/templates/about.html
+++ b/sites/stamped.com/bin/www/templates/about.html
@@ -29,8 +29,7 @@
                 <a href="/" class="brand replaced">Stamped</a>
                 <div class="inner">
                 <div class="mission replaced">
-                    <p>Our mission is to build a platform for friends to help each other discover the 
-best parts of their world.</p>
+                    <p>Our mission is to build a platform for friends to help each other discover the best parts of their world.</p>
                 </div>
                 <div class="team">
                     <h3 class="divide">The team</h3>
@@ -72,7 +71,7 @@ best parts of their world.</p>
                             <div class="copy">
                                 <div class="person bart">
                                     <span class="name">Bart Stein</span>
-                                    <span class="title">Co-Founder, Marketing & Partnerships</span>
+                                    <span class="title">Co-Founder, Marketing &amp; Partnerships</span>
                                 </div>
                                 <div class="history">
                                     <p>Bart previously worked at Google Creative Lab, where he contributed to Google's first Super Bowl campaign. He also worked for David Pogue, the NY Times tech columnist. He graduated from Brown and is not Robby's brother.</p>
@@ -135,7 +134,7 @@ best parts of their world.</p>
                                     <span class="title">Product Designer</span>
                                 </div>
                                 <div class="history">
-                                    <p>Jake graduated from Rhode Island School of Design and completed a minor in Computer Science at Brown. You can find a big portrait of him at Bed, Bath & Beyond, featuring the <a href="http://www.quirky.com/products/44-product-0044?r=3bef260716ecfa5e89ec186c322f5476">power strip he invented</a>. Besides that, this is his first job.</p>
+                                    <p>Jake graduated from Rhode Island School of Design and completed a minor in Computer Science at Brown. You can find a big portrait of him at Bed, Bath &amp; Beyond, featuring the <a href="http://www.quirky.com/products/44-product-0044?r=3bef260716ecfa5e89ec186c322f5476">power strip he invented</a>. Besides that, this is his first job.</p>
                                     <a class="follow" href="http://twitter.com/hova414">Follow @hova414</a>
                                 </div>
                             </div>
