--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -368,7 +368,7 @@
 						<string key="NSFrame">{{0, 367}, {320, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="600580011"/>
+						<reference key="NSNextKeyView" ref="325334347"/>
 						<reference key="IBUIBackgroundColor" ref="140928236"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -376,7 +376,7 @@
 					<object class="IBUIButton" id="600580011">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{32, 367}, {80, 49}}</string>
+						<string key="NSFrame">{{160, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="763577215"/>
@@ -411,7 +411,7 @@
 					<object class="IBUIButton" id="358418181">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{120, 367}, {80, 49}}</string>
+						<string key="NSFrame">{{80, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="970363619"/>
@@ -440,7 +440,7 @@
 					<object class="IBUIButton" id="537858746">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{208, 367}, {80, 49}}</string>
+						<string key="NSFrame">{{240, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="337528872"/>
@@ -466,13 +466,42 @@
 							<string key="NSResourceName">toolbar_shareButton.png</string>
 						</object>
 					</object>
+					<object class="IBUIButton" id="325334347">
+						<reference key="NSNextResponder" ref="880728759"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{0, 367}, {80, 49}}</string>
+						<reference key="NSSuperview" ref="880728759"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="226329869"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUIContentMode">1</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIFont" ref="663283930"/>
+						<reference key="IBUIHighlightedTitleColor" ref="140928236"/>
+						<reference key="IBUINormalTitleColor" ref="577811154"/>
+						<reference key="IBUINormalTitleShadowColor" ref="508534976"/>
+						<object class="NSCustomResource" key="IBUIHighlightedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">toolbar_likeButton_highlighted.png</string>
+						</object>
+						<object class="NSCustomResource" key="IBUISelectedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">toolbar_likeButton_selected.png</string>
+						</object>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">toolbar_likeButton.png</string>
+						</object>
+					</object>
 					<object class="IBUILabel" id="763577215">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{47, 399}, {50, 16}}</string>
+						<string key="NSFrame">{{175, 399}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="358418181"/>
+						<reference key="NSNextKeyView" ref="537858746"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -494,13 +523,37 @@
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 					</object>
+					<object class="IBUILabel" id="226329869">
+						<reference key="NSNextResponder" ref="880728759"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{15, 399}, {50, 16}}</string>
+						<reference key="NSSuperview" ref="880728759"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="358418181"/>
+						<string key="NSReuseIdentifierKey">_NS:311</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Like</string>
+						<reference key="IBUIFont" ref="74241631"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
+					</object>
 					<object class="IBUILabel" id="970363619">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{135, 399}, {50, 16}}</string>
+						<string key="NSFrame">{{95, 399}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="537858746"/>
+						<reference key="NSNextKeyView" ref="600580011"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -521,7 +574,7 @@
 					<object class="IBUILabel" id="337528872">
 						<reference key="NSNextResponder" ref="880728759"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{223, 399}, {50, 16}}</string>
+						<string key="NSFrame">{{255, 399}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -725,6 +778,39 @@
 					</object>
 					<int key="connectionID">75</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">addFavoriteLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="970363619"/>
+					</object>
+					<int key="connectionID">79</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">likeButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="325334347"/>
+					</object>
+					<int key="connectionID">80</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">likeLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="226329869"/>
+					</object>
+					<int key="connectionID">81</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">handleLikeButtonTap:</string>
+						<reference key="source" ref="325334347"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">82</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -760,6 +846,8 @@
 							<reference ref="763577215"/>
 							<reference ref="970363619"/>
 							<reference ref="337528872"/>
+							<reference ref="226329869"/>
+							<reference ref="325334347"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -954,6 +1042,17 @@
 						<reference key="object" ref="337528872"/>
 						<reference key="parent" ref="880728759"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">76</int>
+						<reference key="object" ref="325334347"/>
+						<reference key="parent" ref="880728759"/>
+						<string key="objectName">Button - Like</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">78</int>
+						<reference key="object" ref="226329869"/>
+						<reference key="parent" ref="880728759"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1003,6 +1102,10 @@
 					<string>70.IBPluginDependency</string>
 					<string>71.IBPluginDependency</string>
 					<string>73.IBPluginDependency</string>
+					<string>76.IBPluginDependency</string>
+					<string>76.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>76.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
+					<string>78.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1075,6 +1178,10 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<real value="2"/>
+					<real value="3"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1089,7 +1196,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">75</int>
+			<int key="maxID">82</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1101,12 +1208,14 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>handleLikeButtonTap:</string>
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1116,12 +1225,17 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>handleLikeButtonTap:</string>
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">handleLikeButtonTap:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 							<object class="IBActionInfo">
 								<string key="name">handleRestampButtonTap:</string>
 								<string key="candidateClassName">id</string>
@@ -1143,6 +1257,7 @@
 							<string>activityView</string>
 							<string>addCommentField</string>
 							<string>addFavoriteButton</string>
+							<string>addFavoriteLabel</string>
 							<string>bottomToolbar</string>
 							<string>commenterImageView</string>
 							<string>commenterNameLabel</string>
@@ -1150,6 +1265,8 @@
 							<string>currentUserImageView</string>
 							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
+							<string>likeButton</string>
+							<string>likeLabel</string>
 							<string>loadingView</string>
 							<string>mainCommentContainer</string>
 							<string>scrollView</string>
@@ -1160,6 +1277,7 @@
 							<string>UIView</string>
 							<string>UITextField</string>
 							<string>UIButton</string>
+							<string>UILabel</string>
 							<string>UIView</string>
 							<string>UserImageView</string>
 							<string>UILabel</string>
@@ -1167,6 +1285,8 @@
 							<string>UserImageView</string>
 							<string>UIImageView</string>
 							<string>UIView</string>
+							<string>UIButton</string>
+							<string>UILabel</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIView</string>
 							<string>UIScrollView</string>
@@ -1180,6 +1300,7 @@
 							<string>activityView</string>
 							<string>addCommentField</string>
 							<string>addFavoriteButton</string>
+							<string>addFavoriteLabel</string>
 							<string>bottomToolbar</string>
 							<string>commenterImageView</string>
 							<string>commenterNameLabel</string>
@@ -1187,6 +1308,8 @@
 							<string>currentUserImageView</string>
 							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
+							<string>likeButton</string>
+							<string>likeLabel</string>
 							<string>loadingView</string>
 							<string>mainCommentContainer</string>
 							<string>scrollView</string>
@@ -1205,6 +1328,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">addFavoriteButton</string>
 								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">addFavoriteLabel</string>
+								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">bottomToolbar</string>
@@ -1233,6 +1360,14 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">headerView</string>
 								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">likeButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">likeLabel</string>
+								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">loadingView</string>
@@ -1288,6 +1423,9 @@
 				<string>shelf_background.png</string>
 				<string>stamp_detail_ripple_bottom</string>
 				<string>stamp_detail_ripple_top</string>
+				<string>toolbar_likeButton.png</string>
+				<string>toolbar_likeButton_highlighted.png</string>
+				<string>toolbar_likeButton_selected.png</string>
 				<string>toolbar_shareButton.png</string>
 				<string>toolbar_shareButton_highlighted.png</string>
 				<string>toolbar_stampButton.png</string>
@@ -1303,6 +1441,9 @@
 				<string>{320, 240}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
 				<string>{52, 48}</string>
 				<string>{52, 48}</string>
 				<string>{52, 48}</string>
