--- a/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
@@ -390,7 +390,7 @@
 								<string key="NSFrame">{{261, 16}, {50, 30}}</string>
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="715334343"/>
+								<reference key="NSNextKeyView" ref="110642938"/>
 								<string key="NSReuseIdentifierKey">_NS:222</string>
 								<reference key="IBUIBackgroundColor" ref="343956617"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -445,7 +445,7 @@
 								<bool key="IBUIEnabled">NO</bool>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="32402340">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
@@ -455,7 +455,7 @@
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor">
+								<object class="NSColor" key="IBUINormalTitleShadowColor" id="604820021">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
@@ -499,6 +499,30 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
+							</object>
+							<object class="IBUIButton" id="110642938">
+								<reference key="NSNextResponder" ref="870662028"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{281, 0}, {39, 73}}</string>
+								<reference key="NSSuperview" ref="870662028"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="715334343"/>
+								<string key="NSReuseIdentifierKey">_NS:222</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIFont" ref="32402340"/>
+								<reference key="IBUIHighlightedTitleColor" ref="935530847"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="604820021"/>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">gray_disclosure_arrow.png</string>
+								</object>
 							</object>
 						</object>
 						<string key="NSFrameSize">{320, 416}</string>
@@ -794,6 +818,23 @@
 					</object>
 					<int key="connectionID">117</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">disclosureButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="110642938"/>
+					</object>
+					<int key="connectionID">120</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">disclosureButtonPressed:</string>
+						<reference key="source" ref="110642938"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">121</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -841,6 +882,7 @@
 							<reference ref="591413953"/>
 							<reference ref="969060622"/>
 							<reference ref="878944707"/>
+							<reference ref="110642938"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -1008,6 +1050,12 @@
 						<reference key="parent" ref="870662028"/>
 						<string key="objectName">Share Label</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">119</int>
+						<reference key="object" ref="110642938"/>
+						<reference key="parent" ref="870662028"/>
+						<string key="objectName">Disclosure Button</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1029,6 +1077,7 @@
 					<string>111.IBPluginDependency</string>
 					<string>111.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>112.IBPluginDependency</string>
+					<string>119.IBPluginDependency</string>
 					<string>36.IBPluginDependency</string>
 					<string>36.IBUserGuides</string>
 					<string>37.IBPluginDependency</string>
@@ -1069,6 +1118,7 @@
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 					</object>
@@ -1105,7 +1155,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">117</int>
+			<int key="maxID">121</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1118,12 +1168,14 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>backButtonPressed:</string>
+							<string>disclosureButtonPressed:</string>
 							<string>editButtonPressed:</string>
 							<string>saveStampButtonPressed:</string>
 							<string>tweetButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1135,6 +1187,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>backButtonPressed:</string>
+							<string>disclosureButtonPressed:</string>
 							<string>editButtonPressed:</string>
 							<string>saveStampButtonPressed:</string>
 							<string>tweetButtonPressed:</string>
@@ -1143,6 +1196,10 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBActionInfo">
 								<string key="name">backButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">disclosureButtonPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -1169,6 +1226,7 @@
 							<string>creditLabel</string>
 							<string>creditTextField</string>
 							<string>detailLabel</string>
+							<string>disclosureButton</string>
 							<string>editButton</string>
 							<string>mainCommentContainer</string>
 							<string>reasoningLabel</string>
@@ -1191,6 +1249,7 @@
 							<string>UILabel</string>
 							<string>STCreditTextField</string>
 							<string>UILabel</string>
+							<string>UIButton</string>
 							<string>UIButton</string>
 							<string>UIView</string>
 							<string>UILabel</string>
@@ -1216,6 +1275,7 @@
 							<string>creditLabel</string>
 							<string>creditTextField</string>
 							<string>detailLabel</string>
+							<string>disclosureButton</string>
 							<string>editButton</string>
 							<string>mainCommentContainer</string>
 							<string>reasoningLabel</string>
@@ -1255,6 +1315,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">detailLabel</string>
 								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">disclosureButton</string>
+								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">editButton</string>
@@ -1316,6 +1380,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">STCreditTextField</string>
+					<string key="superclassName">UITextField</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STCreditTextField.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UserImageView</string>
 					<string key="superclassName">UIControl</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -1345,6 +1417,7 @@
 				<string>edit_button_background.png</string>
 				<string>edit_pencil.png</string>
 				<string>gradient_background.png</string>
+				<string>gray_disclosure_arrow.png</string>
 				<string>shelf_background.png</string>
 				<string>stamp_detail_ripple_bottom</string>
 				<string>stamp_detail_ripple_top</string>
@@ -1359,6 +1432,7 @@
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{320, 480}</string>
+				<string>{16, 16}</string>
 				<string>{320, 240}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
